--- a/comparateur_produit (1).html
+++ b/comparateur_produit (1).html
@@ -4,25 +4,104 @@
   <meta charset="UTF-8">
   <title>DealPilot – Comparateur de prix</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="DealPilot – Comparez automatiquement les meilleures offres et trouvez le meilleur prix pour vos produits préférés sur Amazon, Fnac, Cdiscount et Boulanger. Achetez malin et économisez facilement !">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    body { margin:0; font-family:Arial; background:#0b1020; color:#e5e7eb; }
-    header { background:linear-gradient(135deg,#2563eb,#1e40af); padding:40px; text-align:center; }
-    h1 { margin:0; }
+    /* ===== Fonts & Reset ===== */
+    body { margin:0; font-family:'Roboto', sans-serif; background:#0b1020; color:#e5e7eb; }
+    * { box-sizing:border-box; }
+
+    /* ===== Header ===== */
+    header {
+      background: linear-gradient(135deg,#1e3a8a,#2563eb);
+      padding:50px 20px;
+      text-align:center;
+      border-bottom-left-radius:16px;
+      border-bottom-right-radius:16px;
+    }
+    header h1 { margin:0; font-size:2.8em; font-weight:700; }
+    header p { font-size:1.2em; margin-top:8px; color:#cbd5e1; }
+
+    /* ===== Container ===== */
     .container { max-width:1100px; margin:auto; padding:40px 20px; }
-    .card { background:#020617; padding:25px; border-radius:16px; margin-bottom:30px; }
-    input, button { width:100%; padding:14px; border-radius:10px; border:none; margin-top:10px; }
-    button { background:#2563eb; color:white; cursor:pointer; }
-    table { width:100%; border-collapse:collapse; margin-top:20px; }
-    th, td { padding:12px; border-bottom:1px solid #1e293b; text-align:center; }
-    .best { background:rgba(34,197,94,.15); border-left:5px solid #22c55e; }
-    footer { text-align:center; padding:30px; opacity:.6; }
+
+    /* ===== Card ===== */
+    .card {
+      background:#121827;
+      padding:30px;
+      border-radius:16px;
+      box-shadow:0 8px 25px rgba(0,0,0,0.4);
+    }
+
+    /* ===== Input & Button ===== */
+    input {
+      width:100%;
+      padding:15px;
+      border-radius:10px;
+      border:none;
+      margin-top:10px;
+      font-size:1em;
+      background:#1f2937;
+      color:#e5e7eb;
+    }
+    button {
+      width:100%;
+      padding:15px;
+      margin-top:10px;
+      border:none;
+      border-radius:10px;
+      font-size:1em;
+      font-weight:700;
+      background:#ef4444; /* rouge vif */
+      color:white;
+      cursor:pointer;
+      transition:0.3s;
+    }
+    button:hover {
+      background:#dc2626;
+      transform:scale(1.03);
+    }
+
+    /* ===== Table ===== */
+    table {
+      width:100%;
+      border-collapse:collapse;
+      margin-top:25px;
+      border-radius:10px;
+      overflow:hidden;
+      background:#1f2937;
+    }
+    th, td {
+      padding:14px;
+      text-align:center;
+      border-bottom:1px solid #374151;
+      font-size:0.95em;
+    }
+    th { background:#1e40af; color:#fff; font-weight:700; }
+    tr:hover { background:#374151; }
+    .best { background:#111827; border-left:5px solid #ef4444; font-weight:700; }
+
+    /* ===== Footer ===== */
+    footer {
+      text-align:center;
+      padding:25px;
+      font-size:0.9em;
+      color:#94a3b8;
+    }
+
+    /* ===== Responsive ===== */
+    @media(max-width:768px) {
+      header h1 { font-size:2em; }
+      input, button { font-size:0.95em; padding:12px; }
+      th, td { font-size:0.85em; padding:10px; }
+    }
   </style>
 </head>
 <body>
 
 <header>
-  <h1>🚀 DealPilot</h1>
-  <p>Le comparateur intelligent pour acheter au meilleur prix</p>
+  <h1>DealPilot</h1>
+  <p>Le comparateur intelligent pour trouver le meilleur prix</p>
 </header>
 
 <div class="container">
