--- a/comparateur_produit (1).html
+++ b/comparateur_produit (1).html
@@ -7,9 +7,9 @@
   <meta name="description" content="DealPilot – Comparez automatiquement les meilleures offres et trouvez le meilleur prix pour vos produits préférés sur Amazon, Fnac, Cdiscount et Boulanger. Achetez malin et économisez facilement !">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    /* ===== Fonts & Reset ===== */
-    body { margin:0; font-family:'Roboto', sans-serif; background:#0b1020; color:#e5e7eb; }
+    /* ===== Reset & Font ===== */
     * { box-sizing:border-box; }
+    body { margin:0; font-family:'Roboto', sans-serif; background:#0b1020; color:#e5e7eb; }
 
     /* ===== Header ===== */
     header {
